--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="bg-image">
+    <div class="bg-image container">
         <img class="logo" src="images/logo.png" alt="">
         <div class="content">
             <p class="title">Thank You!</p>
